2011-11-23  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/GridLayout/getHgap.java:
	* gnu/testlet/java/awt/GridLayout/getVgap.java:
	* gnu/testlet/java/awt/GridLayout/minimumLayoutSize.java:
	* gnu/testlet/java/awt/GridLayout/setHgap.java:
	* gnu/testlet/java/awt/GridLayout/setVgap.java:
	New tests for checking GridLayout manager API.

2011-11-22  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/FlowLayout/getAlignment.java:
	* gnu/testlet/java/awt/FlowLayout/getHgap.java:
	* gnu/testlet/java/awt/FlowLayout/getVgap.java:
	* gnu/testlet/java/awt/FlowLayout/setAlignment.java:
	* gnu/testlet/java/awt/FlowLayout/setHgap.java:
	* gnu/testlet/java/awt/FlowLayout/setVgap.java:
	New tests for checking FlowLayout manager API.

2011-11-21  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/BorderLayout/toString.java:
	* gnu/testlet/java/awt/FlowLayout/toString.java:
	* gnu/testlet/java/awt/GridLayout/toString.java:
	Updated.
	* gnu/testlet/java/awt/FlowLayout/constructors.java:
	Added new test for checking constructor behaviour of FlowLayout
	manager.
	* gnu/testlet/java/awt/GridLayout/PaintTestTwoRowsFiveCanvases.java:
	Added new test for checking proper behaviour of GridLayout manager.

2011-11-10  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/GridLayout/PaintTestFiveRowsBiggerVgap.java:
	* gnu/testlet/java/awt/GridLayout/PaintTestFiveRowsFiveCanvases.java:
	* gnu/testlet/java/awt/GridLayout/PaintTestOneRowBiggerHgap.java:
	* gnu/testlet/java/awt/GridLayout/PaintTestOneRowFiveCanvases.java:
	Added four new tests for checking proper behaviour of GridLayout
	manager.

2011-11-07  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/GridLayout/PaintTestBiggerGaps.java:
	* gnu/testlet/java/awt/GridLayout/PaintTestBiggerHgap.java:
	* gnu/testlet/java/awt/GridLayout/PaintTestBiggerVgap.java:
	Added three new tests for checking proper behaviour of GridLayout
	manager.